@@ -17,7 +17,7 @@
 		</TD>
 		<TD WIDTH="97%" onClick="return self.location.href='?m=netdevinfo&id={if $netdevinfo.id}{$netdevinfo.id}{else}{$netdevedit.id}{/if}&ip={$netdevips[list].id}';">
 			<B>{$netdevips[list].name}</B><BR>	
-			{$netdevips[list].ip} / {$netdevips[list].mac}<BR>
+			{$netdevips[list].ip}{if $netdevips[list].ip_pub!="0.0.0.0"} ({$netdevips[list].ip_pub}){/if} / {$netdevips[list].mac}<BR>
 			<NOBR>{$netdevips[list].info|truncate:45:"..."}</NOBR>
 		</TD>
 		<TD WIDTH="1%" ALIGN="RIGHT" onClick="return self.location.href='?m=netdevinfo&id={if $netdevinfo.id}{$netdevinfo.id}{else}{$netdevedit.id}{/if}&ip={$netdevips[list].id}';">
