@@ -3,18 +3,18 @@
 <H1>{$layout.pagetitle}</H1>
 <TABLE WIDTH="100%" CELLPADDING="3">
 	<TR>
-		<TD VALIGN="TOP" WIDTH="50%">
+		<TD style="vertical-align: top;" WIDTH="50%">
 			{include file="netdevinfobox.html"}
 		</TD>
-		<TD VALIGN="TOP" WIDTH="50%">
+		<TD style="vertical-align: top;" WIDTH="50%">
 			{include file="netdevipeditbox.html"}
 		</TD>
 	</TR>
 	<TR>
-		<TD VALIGN="TOP" WIDTH="50%">
+		<TD style="vertical-align: top;" WIDTH="50%">
 			{include file="netdevconnbox.html"}
 		</TD>
-		<TD VALIGN="TOP" WIDTH="50%">
+		<TD style="vertical-align: top;" WIDTH="50%">
 			{include file="netdevnodes.html"}
 		</TD>
 	</TR>
