@@ -16,6 +16,16 @@
 			{$nodeipdata.ip}
 		</TD>
 	</TR>
+	{if $nodeipdata.ip_pub != "0.0.0.0"}
+	<TR CLASS="LIGHT">
+		<TD WIDTH="1%" CLASS="FLEFT">
+			<IMG SRC="img/ip_pub.gif" ALT="{t}Pub. IP address:{/t}">
+		</TD>
+		<TD WIDTH="99%" CLASS="FRIGHT" COLSPAN="2">
+			{$nodeipdata.ip_pub}
+		</TD>
+	</TR>
+	{/if}
 	<TR CLASS="LIGHT">
 		<TD WIDTH="1%" CLASS="FLEFT">
 			<IMG SRC="img/mac.gif" ALT="{t}MAC address:{/t}">
